kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameshop-app
  namespace: gameshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameshop-app
  template:
    metadata:
      labels:
        app: gameshop-app
    spec:
      containers:
        - name: gameshop-app
          image: matejtod/gameshop-app:latest
          ports:
            - containerPort: 9090
