kubernetes/db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gameshop-db
  namespace: gameshop
spec:
  serviceName: "gameshop-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: gameshop-db
  template:
    metadata:
      labels:
        app: gameshop-db
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
