kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gameshop-app-service
  namespace: gameshop
spec:
  type: ClusterIP
  selector:
    app: gameshop-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
