kubernetes/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gameshop-db-service
  namespace: gameshop
spec:
  type: ClusterIP
  selector:
    app: gameshop-db
  ports:
    - protocol: TCP
      port: 5432
