kubernetes/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameshop-ingress
  namespace: gameshop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: playtopia.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gameshop-app-service
                port:
                  number: 9090
